Eclipseden commit edildi

--- a/src/main/resources/public/main2.htm
+++ b/src/main/resources/public/main2.htm
@@ -21,7 +21,7 @@ h1 {
 </head>
 <body>
 <h1>EFT Software Homework</h1>
-
+Eclipse commit deneme
 <p>See <a href="js/main.js">main.js</a></p>
 
 </body>
