--- a/src/main/resources/public/main.htm
+++ b/src/main/resources/public/main.htm
@@ -6,10 +6,14 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
 <title>EFT Software Homework</title>
-<link rel="stylesheet" type="text/css" href="extjs/6.0.0/ext-all.css">
-<script type="text/javascript" src="extjs/6.0.0/ext-all.js"></script>
 
-<!-- <script type="text/javascript" src="js/merchant.js"></script>  -->
+<link rel="stylesheet" type="text/css" href="extjs/6.2.0/thema-classic-all.css">
+<script type="text/javascript" src="extjs/6.2.0/ext-all.js"></script>
+
+
+<script type="text/javascript" src="js/main.js"></script>
+
+
 
 <style>
 h1 {
@@ -22,7 +26,7 @@ h1 {
 	<h1>EFT Software Homework</h1>
 
 	<p>
-		See <a href="js/merchant.js">merchant.js</a>
+		See <a href="js/main.js">main.js</a>
 	</p>
 
 </body>
