--- a/src/main/resources/public/login.htm
+++ b/src/main/resources/public/login.htm
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
-<title>EFT Software Homework</title>
+<title>Sencha</title>
 
 <link rel="stylesheet" type="text/css" href="extjs/6.2.0/thema-classic-all.css">	
 <script type="text/javascript" src="extjs/6.2.0/ext-all.js"></script>	
@@ -20,7 +20,7 @@ h1 {
 
 </head>
 <body>
-	<h1>EFT Software Homework Login</h1>
+	<!-- <h1>EFT Software Homework Login</h1>  -->
 
 	<div id="divLogin"></div>
 
